# Bank-Customer-Support-Agent

./: .env.example  README.md  demo.py  pyproject.toml
config/: prompts.py  settings.py
data/: faq.json
src/: orchestrator.py
src/agents/: billing.py  general.py  technical.py  triage.py
src/schemas/: query.py  response.py
src/tools/: escalate.py  faq_lookup.py
