[project]
name = "bank-customer-support-agent"
version = "0.1.0"
description = "A multi-agent bank customer support system"
authors = [
    { name = "Developer", email = "dev@example.com" }
]
dependencies = [
    "langchain",
    "langchain-anthropic",
    "langchain-google-genai",
    "langchain-groq>=1.1.2",
    "pydantic-settings",
]
requires-python = ">=3.11"

[tool.uv]
managed = true
